--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -245,6 +245,7 @@ h5.small {
     width: 100%;
     height: 246px;
     object-fit: cover;
+    border-radius: 10px;
 }
 .card-box figure {
     margin: 0px;
